--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+spring.application.name=eauction-config-server
+server.port=8888
+spring.profiles.active=dev
+spring.cloud.config.server.git.uri=https://github.com/avi3s/cg-eauction-configuration.git
+spring.cloud.config.server.git.default-label=main
+spring.cloud.config.server.git.search-paths=auth,bid,product
+spring.cloud.config.server.git.clone-on-start=true
+spring.cloud.config.server.bootstrap=true
+#spring.security.user.name=avirup
+#spring.security.user.password=avirup@123
+#encrypt.key=ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890
 
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+logging.file.name=config-server.log
