--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8888
 spring.profiles.active=dev
 spring.cloud.config.server.git.uri=https://github.com/avi3s/cg-eauction-configuration.git
 spring.cloud.config.server.git.default-label=main
-spring.cloud.config.server.git.search-paths=auth,bid,product
+spring.cloud.config.server.git.search-paths=auth,bid,eureka,product
 spring.cloud.config.server.git.clone-on-start=true
 spring.cloud.config.server.bootstrap=true
 #spring.security.user.name=avirup
